@startuml logger-class-diagram

title libcpplog logger class diagram (cpplog::logger)

enum LogLevel {
    Error
    Info
    Result
    Warning
}
hide LogLevel methods

enum LogComponent {
    LogLevel
    Context
    ContextLong
    Function
    FunctionLong
    TimeStamp
}
hide LogComponent methods

enum Separator {
    def
    none
    use
}
hide Separator methods

package "LogRequest" as LogRequestPackage {

    class LogRequest {
        == public ==
        + LogRequest()
        + LogRequest(LogLevel)
        ..
        + {static} logLevel() : LogLevel
        + {static} logLevel(LogLevel) : LogLevel
        + {static} context() : LogRequest::Context
        + {static} timeStamp() : LogRequest::TimeStamp
        + {static} functionName() : LogRequest::FunctionName
        == private ==
        - location : source_location
        - logLevelAttribute : LogLevel
    }

    class RequestObject {
        == public ==
        + RequestObject(Separator)
        ..
        + userWantsSeparator() : bool
        + userDisabledSeparator() : bool
        == private ==
        - sep : Separator
    }

    class Context {
        == public ==
        + Context(Separator, source_location)
        ..
        + getLocation() : source_location
        == private ==
        location : source_location
    }

    class TimeStamp {
        == public ==
        + TimeStamp(Separator)
    }

    class FunctionName {
        == public ==
        + FunctionName(Separator, source_location)
        ..
        + getLocation() : source_location
        == private ==
        - location : source_location
    }
}


class LogFormat {
    == public ==
    + LogFormat(LogComponent...)
    + LogFormat(LogComponent[ ])
    ..
    + begin() : LogComponent*
    + end() : LogComponent*
    ..
    + {static} defaultValue() : LogFormat
    == private ==
    - components : LogComponent[ ]
}

package Logger as LoggerPackage {
    class Logger {
        == public ==
        + Logger(LogFormat)
        + Logger(ostream&, LogFormat)
        ..
        + setOutput(ostream&) : void
        + setFormat(LogFormat) : void
        + {static} defaultOutput() : ostream&
        ..
        + log(string) : void
        + log(LogLevel, string) : void
        + logOnce(string) : void
        + logOnce(LogLevel, string) : void
        + log(string, LogRequest::FunctionName) : void
        + log(LogLevel, string, LogRequest::FunctionName) : void
        + log(exception&) : void
        + log(LogLevel, exception&) : void
        ..
        + operator<<(string) : Logger&
        + operator<<(float) : Logger&
        + operator<<(LogRequest) : Logger&
        + operator<<(enum LogLevel) : Logger&
        + operator<<(LogRequest::Context) : Logger&
        + operator<<(LogRequest::TimeStamp) : Logger&
        + operator<<(LogRequest::FunctionName) : Logger&
        == private ==
        - pImpl : Logger::Impl*
    }

    class "Logger::Impl" as LoggerImpl {
        == public ==
        + Logger::Impl(ostream&, LogFormat)
        ..
        + setOutput(ostream&) : void
        + setFormat(LogFormat) : void
        ..
        + log(string) : void
        + log(LogLevel, string) : void
        + logOnce(string) : void
        + logOnce(LogLevel, string) : void
        + log(string, LogRequest::FunctionName) : void
        + log(LogLevel, string, LogRequest::FunctionName) : void
        + log(exception&) : void
        + log(LogLevel, exception&) : void
        ..
        + operator<< <T>(T) : Logger::Impl&
        + operator<<(LogRequest) : Logger::Impl&
        + operator<<(enum LogLevel) : Logger::Impl&
        + operator<<(LogRequest::TimeStamp) : Logger::Impl&
        + operator<<(source_location) : Logger::Impl&
        == private ==
        - outputStream : ostream&
        - outMutex : mutex
        - loggedOnceMessages : string[ ]
        - mutexForLoggedMsg : mutex
        - format : LogFormat
        --
        - buildMessageKey(string, location) : string
        - constructLogMessage(LogLevel, string, LogFormat, source_location) : string
    }
}


class "<<globals>>" as globals << (G,#FF77FF) >> {
    logger : Logger
    ..
    setOutput(ostream&) : void
    setFormat(LogFormat) : void
    ..
    log(string) : void
    log(LogLevel, string) : void
    logOnce(string) : void
    logOnce(LogLevel, string) : void
    log(string, LogRequest::FunctionName) : void
    log(LogLevel, string, LogRequest::FunctionName) : void
    log(exception&) : void
    log(LogLevel, exception&) : void
}

package decorator {
    class Decorator
    hide Decorator attributes
    hide Decorator methods
}

LogRequestPackage -- Separator
LoggerPackage -- Separator

RequestObject <|-- Context 
RequestObject <|-- TimeStamp 
RequestObject <|-- FunctionName

LogRequest --> Context
LogRequest --> TimeStamp
LogRequest --> FunctionName

Logger "1" o-- "1" LoggerImpl

LogFormat - LoggerPackage
LogLevel - LoggerPackage
LogComponent - LoggerPackage

LoggerPackage -- LogRequest

globals - LogFormat
globals - LogLevel
globals - LogComponent

LogFormat -[hidden]down-> LogLevel
LogLevel -[hidden]down-> LogComponent

globals -left-> LoggerPackage

LoggerImpl -> decorator

@enduml